rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSExtendedBodyPartTypes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSExtendedBodyPartTypes.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 38, column 2]
    │
    │ 
 37 │  -- Extended IA5 Text body part
 38 │  ia5-text-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 39 │    PARAMETERS  {IA5TextParameters
 40 │                 IDENTIFIED BY  id-ep-ia5-text},
 41 │    DATA        {IA5TextData
 42 │                 IDENTIFIED BY  id-et-ia5-text}
 43 │  }
 45 │  -- Extended G3 Facsimile body part
    │
────╯
