rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSExtendedBodyPartTypes2.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSExtendedBodyPartTypes2.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 31, column 2]
    │
    │ 
 30 │  -- General Text body part
 31 │  general-text-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 32 │    PARAMETERS  {GeneralTextParameters
 33 │                 IDENTIFIED BY  id-ep-general-text},
 34 │    DATA        {GeneralTextData
 35 │                 IDENTIFIED BY  id-et-general-text}
 36 │  }
    │
────╯
