rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSExtendedVoiceBodyPartType.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSExtendedVoiceBodyPartType.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 31, column 2]
    │
    │ 
 30 │  -- Extended Voice body part
 31 │  voice-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 32 │    PARAMETERS  {VoiceParameters
 33 │                 IDENTIFIED BY  id-ep-voice},
 34 │    DATA        {VoiceData
 35 │                 IDENTIFIED BY  id-et-voice}
 36 │  }
    │
────╯
