rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSFileTransferBodyPartType.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSFileTransferBodyPartType.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 48, column 2]
    │
    │ 
 47 │  -- File Transfer body part
 48 │  file-transfer-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 49 │    PARAMETERS  {FileTransferParameters
 50 │                 IDENTIFIED BY  id-ep-file-transfer},
 51 │    DATA        {FileTransferData
 52 │                 IDENTIFIED BY  id-et-file-transfer}
 53 │  }
    │
────╯
