rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSForwardedContentBodyPartType.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSForwardedContentBodyPartType.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 38, column 2]
    │
    │ 
 37 │  -- Forwarded Content body part
 38 │  content-body-part{ExtendedContentType:content-type} EXTENDED-BODY-PART-TYPE ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 39 │    {
 40 │    PARAMETERS
 41 │      {ForwardedContentParameters
 42 │       IDENTIFIED BY  {id-ep-content  content-type}},
 43 │    DATA        {Content
 44 │                 IDENTIFIED BY  {id-et-content  content-type}}
 45 │  }
    │
────╯
