rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSForwardedReportBodyPartType.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSForwardedReportBodyPartType.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 36, column 2]
    │
    │ 
 35 │  -- Report body part
 36 │  report-body-part EXTENDED-BODY-PART-TYPE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 37 │    DATA  {ReportDeliveryArgument
 38 │           IDENTIFIED BY  id-et-report}
 39 │  }
 41 │  -- Notification body part
    │
────╯
