rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSInformationObjects.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSInformationObjects.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 124, column 2]
     │
     │ 
 123 │  -- IPMS Extensions
 124 │  IPMSExtension{IPMS-EXTENSION:ChosenFrom} ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 125 │    type   IPMS-EXTENSION.&id({ChosenFrom}),
 126 │    value  IPMS-EXTENSION.&Type({ChosenFrom}{@type}) DEFAULT NULL:NULL
 127 │  }
     │
─────╯
