rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSMessageStoreAttributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSMessageStoreAttributes.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 210, column 2]
     │
     │ 
 210 │  NonMessageBodyPartSynopsis ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 211 │    type        [0]  OBJECT IDENTIFIER,
 212 │    parameters  [1]  INSTANCE OF TYPE-IDENTIFIER OPTIONAL,
 213 │    size        [2]  INTEGER,
 214 │    processed   [3]  BOOLEAN DEFAULT FALSE
 215 │  }
 217 │  -- Body part summary
     │
─────╯
