rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSObjectIdentifiers2.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSObjectIdentifiers2.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod ipmsobject_identifiers2 {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ID(pub ObjectIdentifier);
    #[doc = " Interpersonal Messaging (ISO/IEC extensions)"]
    pub static ID_ISO_IPMS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[1u32, 0u32, 10021u32, 7u32]).to_owned()));
}
