rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSUpperBounds.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSUpperBounds.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod ipmsupper_bounds {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Upper bounds"]
    pub static UB_ALPHA_CODE_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_AUTO_FORWARD_COMMENT: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(256i128));
    pub static UB_CIRCULATION_LIST_MEMBERS: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(256i128));
    pub static UB_DISTRIBUTION_CODES: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_EXTENDED_SUBJECT_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(256i128));
    pub static UB_FREE_FORM_NAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_INFORMATION_CATEGORIES: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(16i128));
    pub static UB_INFORMATION_CATEGORY_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(64i128));
    pub static UB_IPM_IDENTIFIER_SUFFIX: LazyLock<Integer> = LazyLock::new(|| Integer::from(2i128));
    pub static UB_LOCAL_IPM_IDENTIFIER: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_MANUAL_HANDLING_INSTRUCTION_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128i128));
    pub static UB_MANUAL_HANDLING_INSTRUCTIONS: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(16i128));
    pub static UB_ORIGINATORS_REFERENCE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(64i128));
    pub static UB_PRECEDENCE: LazyLock<Integer> = LazyLock::new(|| Integer::from(127i128));
    pub static UB_SUBJECT_FIELD: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_TELEPHONE_NUMBER: LazyLock<Integer> = LazyLock::new(|| Integer::from(32i128));
}
